# yt-newsletter-pkg

./: .env.example  .gitignore  README.md  monitor.py  pyproject.toml  requirements.txt
.cursor/: rules
docs/superpowers/plans/: 2026-04-10-controller.md
docs/superpowers/specs/: 2026-04-10-yt-newsletter-controller-design.md
src/yt_newsletter/: __main__.py  monitor.py  nba_roster.py
tests/: test_import.py
web/: .env.example  README.md  package-lock.json  package.json  vercel.json
web/prisma/: schema.prisma
web/src/: middleware.ts
web/src/app/: layout.tsx
web/src/app/api/auth/login/: route.ts
web/src/app/api/auth/logout/: route.ts
web/src/app/api/channels/: route.ts
web/src/app/api/channels/[id]/: route.ts
web/src/app/api/cron/poll/: route.ts
web/src/app/api/history/: route.ts
web/src/app/api/recap/: route.ts
web/src/app/api/status/: route.ts
web/src/app/api/test/: route.ts
web/src/app/dashboard/: page.tsx  ui.tsx
web/src/app/login/: page.tsx
web/src/lib/: nba-roster.ts  pipeline.ts  rss.ts  session.ts
