[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-newsletter"
version = "0.1.0"
description = "YouTube fantasy basketball newsletter: RSS, transcripts, Gemini, email"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0",
    "youtube-transcript-api>=1.0.0",
    "google-generativeai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
yt-newsletter = "yt_newsletter.monitor:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
